# imlf

./: LICENSE  README.md  stack.yaml  strictlazy.cabal
examples/: example1.sl  example2.sl  example3.sl  example4.sl  example5.sl
src/: Ast.hs  Effects.hs  Id.hs  Kind.hs  Kindchecker.hs  Lambda.hs  Lexer.x  Main.hs  PPrint.hs  Parser.y  Records.hs  Token.hs  Type.hs  Typechecker.hs
